Fix #72 - The `Reopen` button is not aligned with the `OK` and the `Problem`buttons

--- a/src/main/webapp/css/checklist.css
+++ b/src/main/webapp/css/checklist.css
@@ -110,3 +110,7 @@ a.anchor {
     top: -180px;
     visibility: hidden;
 }
+
+.btn-group {
+    vertical-align: bottom;
+}
